manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-troubleshooting
spec:
    ports:
    - port: 8080 
    selector:
        app: troubleshooting
