manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: troubleshooting-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "tr-82238157.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: troubleshooting
            port:
              number: 8080
        pathType: Prefix
